# Fletube

./: .gitignore  README.md  main.py  pubspec.yaml  pyproject.toml  requirements.txt  routes.py
.github/workflows/: buildWIN.yml  build_windows.yml
components/: appearence_settings.py  contact_settings.py  download_settings.py  drawer.py  general_settings.py  user_menu.py
pages/: download_page.py  feedback_page.py  history_page.py  login_page.py  page_404.py  payment_page.py  settings_page.py
partials/: download_content.py  download_sidebar.py
services/: dlp_service.py  download_manager.py  send_feedback.py  storage_service.py  supabase_utils.py
utils/: ClientStoragev2.py  client_storage_utils.py  extract_thumbnail.py  extract_title.py  ffmpeg_utils.py  file_picker_utils.py  fonts_loader.py  logging_config.py  session_storage_utils.py  theme.py  ui_helpers.py  validations.py  video_info_extractor.py
