[project]
name = "fletube"
version = "1.2.0"
description = "Aplicativo para download de vídeos com Flet."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.7.0",
  "arrow==1.3.0",
  "binaryornot==0.4.4",
  "certifi==2024.12.14",
  "cffi==1.17.1",
  "chardet==5.2.0",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "colorama==0.4.6",
  "cookiecutter==2.6.0",
  "fastapi==0.115.6",
  "flet==0.24.0",
  "yt-dlp==2024.12.23"
]

[tool.flet]
org = "com.fletube"
product = "Fletube"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "."
